# ChangeLog for media-sound/mangler
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/mangler/ChangeLog,v 1.4 2009/12/02 19:09:39 yngwin Exp $

  02 Dec 2009; Ben de Groot <yngwin@gentoo.org> mangler-1.0.0.ebuild:
  Force the use of the newer upstream tarball, so we can drop the maintainer
  mode workaround.

*mangler-1.0.0 (02 Dec 2009)

  02 Dec 2009; Ben de Groot <yngwin@gentoo.org> -mangler-1.0_rc3.ebuild,
  +mangler-1.0.0.ebuild:
  Version bump. Remove obsolete.

*mangler-1.0_rc4 (28 Nov 2009)

  28 Nov 2009; Ben de Groot <yngwin@gentoo.org> +mangler-1.0_rc4.ebuild:
  Version bump

*mangler-1.0_rc3 (22 Nov 2009)

  22 Nov 2009; Ben de Groot <yngwin@gentoo.org> +mangler-1.0_rc3.ebuild,
  +metadata.xml:
  Initial import, ebuild based on the live svn one in multimedia overlay.
