@@ -1,6 +1,8 @@
 DIST mangler-1.0.0.tar.gz 865257 RMD160 c12239317f07cc4f5e200e86e2921f62518844db SHA1 80a80fb2b6c5ab5e78bc518d25a9393fcc6f6642 SHA256 87bf2fc003ad154e6fddafa882201d9de92863c328056821f187e68a70833c78
+DIST mangler-1.0.1.tar.bz2 1349062 RMD160 cb8d33c2eef200f3cffdec4b42a5bbdfe5b947fc SHA1 766888d7a1be665865b9bfe680089639ab056991 SHA256 21003131b397559df46ea3e02d46ee59f5c8a021c53ad8aac5327186d8417a22
 DIST mangler-1.0rc4.tar.bz2 1279479 RMD160 47826e3be1e86b8f5c5fc2f4322c11c2fc86bef2 SHA1 1b18837caa00b4865914103c536ba66076d3c515 SHA256 74cbd081b0e2550c741527aa33990dbc8f9565deef66c3f236935b7cb77301cf
 EBUILD mangler-1.0.0.ebuild 687 RMD160 a1c7fe92dcd3c19efd1ee22c7421343470159deb SHA1 147b6776e38df14e487a066176d50b73cca67592 SHA256 bc2d9c68b19fc98c46ec50fb2d3c8e64180b2ec34e786b5b47013360229ddd31
+EBUILD mangler-1.0.1.ebuild 688 RMD160 ffd681d8ea4feb7a5911c5404812cbc22977ccb4 SHA1 a5e6575be2e687939ec334848014046fc8730c02 SHA256 4bb17ef708ccaff6e9c9aac25d4bb0da95fa6fe24f7b616ecc34a8df99f3feb9
 EBUILD mangler-1.0_rc4.ebuild 769 RMD160 3d6de025cfd5c3dedc081a3f95171131f3e09239 SHA1 700be58257dbf50a940af75161ae195603f396da SHA256 036a60da624b9c899eb76bae559d95c1a4cb58a35c8538674de6f2dcd72c0214
-MISC ChangeLog 858 RMD160 10e3083edcc0be16ea8f10ea53834be214d5feab SHA1 7dca759773026c8b3fff940f03357ddb4a90ae70 SHA256 24249ecc676a23dc501b2e1cde4efc15a9f85911f0f42396cf2a7e495a1f7d1d
+MISC ChangeLog 975 RMD160 aaf1aeb359c96b4ad2ba341b25a9ab0862292483 SHA1 82492971b908b5f0ff6b835e142d1fb356908ef0 SHA256 61522f659282f2ed919d49d1e960d608dca5d1810dafb45c703e47f124bc4a7a
 MISC metadata.xml 160 RMD160 10be84fed28405abd22adc6689e87e5bb77e3501 SHA1 0c1bb16a7cc376ef35b87d8699ec9504718d36b9 SHA256 6bafe4a5c7b42309f124ebc2a9d78ebe5379aec4dcdc88c0bda2ab79c9851a6b
